--- a/music-suite.cabal
+++ b/music-suite.cabal
@@ -318,7 +318,7 @@ executable "music-suite-examples-analysis"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            analysis.hs
 
 executable "music-suite-examples-analysis-durations"
@@ -326,7 +326,7 @@ executable "music-suite-examples-analysis-durations"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            AnalysisDurations.hs
 
 executable "music-suite-examples-annotations"
@@ -334,7 +334,7 @@ executable "music-suite-examples-annotations"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            annotations.hs
 
 executable "music-suite-examples-bartok"
@@ -342,7 +342,7 @@ executable "music-suite-examples-bartok"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            bartok.hs
 
 executable "music-suite-examples-behavior"
@@ -350,7 +350,7 @@ executable "music-suite-examples-behavior"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            behavior.hs
 
 executable "music-suite-examples-canon"
@@ -358,7 +358,7 @@ executable "music-suite-examples-canon"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            canon.hs
 
 executable "music-suite-examples-chopin"
@@ -366,7 +366,7 @@ executable "music-suite-examples-chopin"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            chopin.hs
 
 executable "music-suite-examples-duo"
@@ -374,7 +374,7 @@ executable "music-suite-examples-duo"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            duo.hs
 
 executable "music-suite-examples-chords"
@@ -382,7 +382,7 @@ executable "music-suite-examples-chords"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            chords.hs
 
 executable "music-suite-examples-fugue1"
@@ -390,21 +390,21 @@ executable "music-suite-examples-fugue1"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            fugue1.hs
 
 executable "music-suite-examples-mozart"
     build-depends:      base,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            mozart.hs
 
 executable "music-suite-examples-part"
     build-depends:      base,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            part.hs
 
 executable "music-suite-examples-phrases"
@@ -412,14 +412,14 @@ executable "music-suite-examples-phrases"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            phrases.hs
 
 executable "music-suite-examples-hello"
     build-depends:      base,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            hello.hs
 
 executable "music-suite-examples-study-for-harp"
@@ -428,7 +428,7 @@ executable "music-suite-examples-study-for-harp"
                         containers,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            StudyForHarp.hs
 
 executable "music-suite-examples-time-signatures"
@@ -436,7 +436,7 @@ executable "music-suite-examples-time-signatures"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            TimeSignatures.hs
 
 executable "music-suite-examples-dynamics"
@@ -444,7 +444,7 @@ executable "music-suite-examples-dynamics"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            dynamics.hs
 
 executable "music-suite-examples-trio"
@@ -452,7 +452,7 @@ executable "music-suite-examples-trio"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            trio.hs
 
 executable "music-suite-examples-tuplet"
@@ -460,7 +460,7 @@ executable "music-suite-examples-tuplet"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            tuplet.hs
 
 executable "music-suite-examples-klangfarben"
@@ -468,7 +468,7 @@ executable "music-suite-examples-klangfarben"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            klangfarben.hs
 
 executable "music-suite-examples-chorale"
@@ -476,7 +476,7 @@ executable "music-suite-examples-chorale"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            chorale.hs
 
 executable "music-suite-examples-piano1"
@@ -484,21 +484,21 @@ executable "music-suite-examples-piano1"
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            piano1.hs
 executable "music-suite-examples-piano2"
     build-depends:      base,
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            piano2.hs
 executable "music-suite-examples-harp-string-texture"
     build-depends:      base,
                         lens,
                         music-suite
     hs-source-dirs:     examples
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            HarpStringTexture.hs
 
 -- executable "music-suite-examples-piece1"
@@ -513,7 +513,7 @@ executable "music-suite-examples-piece3"
                         lens,
                         music-suite
     hs-source-dirs:     examples/pieces
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            Piece3.hs
 
 executable "music-suite-examples-ambitus"
@@ -521,7 +521,7 @@ executable "music-suite-examples-ambitus"
                         lens,
                         music-suite
     hs-source-dirs:     examples/pieces/Ambitus
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            Score.hs
 
 executable "music-suite-examples-winds-phrasing"
@@ -529,7 +529,7 @@ executable "music-suite-examples-winds-phrasing"
                         lens,
                         music-suite
     hs-source-dirs:     examples/pieces/WindsPhrasing
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            Score.hs
 
 executable "music-suite-examples-sustain-punctuated"
@@ -537,7 +537,7 @@ executable "music-suite-examples-sustain-punctuated"
                         lens,
                         music-suite
     hs-source-dirs:     examples/pieces/SustainPunctuated
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            Score.hs
 
 executable "music-suite-examples-piece8"
@@ -547,7 +547,7 @@ executable "music-suite-examples-piece8"
                         vector-space,
                         music-suite
     hs-source-dirs:     examples/pieces
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            Piece8.hs
 
 executable "music-suite-examples-brass-large-ensemble"
@@ -557,7 +557,7 @@ executable "music-suite-examples-brass-large-ensemble"
                         random,
                         music-suite
     hs-source-dirs:     examples/pieces/BrassLargeEnsemble
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            Score.hs
 
 executable "music-suite-examples-salient-melodic-transformations"
@@ -567,7 +567,7 @@ executable "music-suite-examples-salient-melodic-transformations"
                         random,
                         music-suite
     hs-source-dirs:     examples/pieces/SalientMelodicTransformations
-    ghc-options:        -fno-code
+    -- ghc-options:        -fno-code
     main-is:            Score.hs
 
 
