--- a/stack.yaml
+++ b/stack.yaml
@@ -18,6 +18,7 @@ extra-deps:
 - typelits-witnesses-0.4.0.0
 - dependent-sum-0.7.1.0
 - constraints-extras-0.3.0.2
+- tasty-quickcheck-laws-0.0.3
 - git:  https://github.com/jwaldmann/lilypond-parse
   commit: adfd80122315cbbbeb2a03109860b9b6ecca5d59
 
